clusters/sirius/apps/chimera-md-public/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chimera-md-public
spec:
  selector:
    app: chimera-md-public
  ports:
    - name: http
      port: 8080
      targetPort: http
